syntax = "proto3";

option csharp_namespace = "BlazorAppTest";

service Tags {
	rpc Enumerate (EnumerateRequest) returns (EnumerateResponse);
	rpc GetById (GetRequest) returns (GetResponse);
	rpc Insert (CreateRequest) returns (CreateResponse);
	rpc Update (UpdateRequest) returns (UpdateResponse);
	rpc UpdateValue (ValueUpdateRequest) returns (ValueUpdateResponse);
	rpc Delete (DeleteRequest) returns (DeleteResponse);
	rpc SubscribeValueChanges (SubscribeValueChangesRequest) returns (stream TagValueUpdate);
	rpc GetTagsStream (EnumerateRequest) returns (EnumerateResponse);
}

message SubscribeValueChangesRequest {
}

message TagValueUpdate {
	string tag = 1;
	string value = 2;
}

enum TagValueTypeMessage {
	NODE = 0;
	LOGICAL = 1;
	NUMERIC = 2;
	TEXT= 4;
}

message TagMessage {
	string id = 1;
	string name = 2;
	string description = 3;
	string value = 4;
}

message EnumerateRequest {
}

message EnumerateResponse {
	repeated TagMessage tags = 1;
}

message GetRequest {
	string id = 1;
}

message GetResponse {
	TagMessage tag =1;
}

message CreateRequest {
	string name = 1;
	string description = 2;
	TagValueTypeMessage valueType = 3;
	string parent = 4;
}

message CreateResponse {
	string id = 1;
}

message UpdateRequest {
	string id = 1;
	string name = 2;
	string description = 3;
	string value = 4;
	string parent = 5;
}

message UpdateResponse {
}

message DeleteRequest{
	string id = 1;
}

message DeleteResponse {
}

message ValueUpdateRequest {
	string id = 1;
	string value = 2;
}

message ValueUpdateResponse {	
}